fixed images on mobile

--- a/app/components/structural/routes/certificates/styles.scss
+++ b/app/components/structural/routes/certificates/styles.scss
@@ -26,7 +26,21 @@
     text-align: center;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    
 
+    @include breakpoint(medium) {
+      flex-direction: row;
+    }
+
+    @include breakpoint(large) {
+      flex-direction: row;
+    }
+
+    @include breakpoint(wide) {
+      flex-direction: row;
+    }
+    
     .image {
       flex: 1;
       font-weight: $font_weight_medium;
